[gd_scene load_steps=14 format=2]

[ext_resource path="res://MyScenes/MainMenu/TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://MyAssets/GUI/BG_Title.png" type="Texture" id=2]
[ext_resource path="res://MyAssets/GUI/memo_sw.png" type="Texture" id=3]
[ext_resource path="res://MyAssets/GUI/newgame_b.png" type="Texture" id=4]
[ext_resource path="res://MyAssets/GUI/newgame_b_pressed.png" type="Texture" id=5]
[ext_resource path="res://MyAssets/GUI/continue_b.png" type="Texture" id=6]
[ext_resource path="res://MyAssets/GUI/continue_b_pressed.png" type="Texture" id=7]
[ext_resource path="res://MyAssets/GUI/options_b.png" type="Texture" id=8]
[ext_resource path="res://MyAssets/GUI/options_b_pressed.png" type="Texture" id=9]
[ext_resource path="res://MyAssets/GUI/quit_b.png" type="Texture" id=10]
[ext_resource path="res://MyAssets/GUI/quit_b_pressed.png" type="Texture" id=11]
[ext_resource path="res://MySounds/Soundtracks/GameMusic_ForestTheme_24.ogg" type="AudioStream" id=12]
[ext_resource path="res://MySounds/SooundFX/Items/pressed.wav" type="AudioStream" id=13]

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Background" type="Sprite" parent="."]
position = Vector2( 640.196, 360.761 )
scale = Vector2( 1.70614, 1.54511 )
texture = ExtResource( 2 )

[node name="Menu" type="VBoxContainer" parent="."]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -445.0
margin_top = -280.0
margin_right = 436.0
margin_bottom = 290.0

[node name="TextureRect" type="TextureRect" parent="Menu"]
margin_right = 881.0
margin_bottom = 161.0
texture = ExtResource( 3 )
stretch_mode = 4

[node name="HBoxContainer" type="HBoxContainer" parent="Menu"]
margin_top = 165.0
margin_right = 881.0
margin_bottom = 570.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="LeftMenu" type="VBoxContainer" parent="Menu/HBoxContainer"]
margin_left = 372.0
margin_right = 508.0
margin_bottom = 405.0
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Menu/HBoxContainer/LeftMenu"]
margin_top = 116.0
margin_right = 136.0
margin_bottom = 288.0

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/HBoxContainer/LeftMenu/HBoxContainer"]
margin_right = 136.0
margin_bottom = 172.0

[node name="NewGame" type="TextureButton" parent="Menu/HBoxContainer/LeftMenu/HBoxContainer/VBoxContainer"]
margin_right = 136.0
margin_bottom = 40.0
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )

[node name="Continue" type="TextureButton" parent="Menu/HBoxContainer/LeftMenu/HBoxContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 136.0
margin_bottom = 84.0
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )

[node name="Options" type="TextureButton" parent="Menu/HBoxContainer/LeftMenu/HBoxContainer/VBoxContainer"]
margin_top = 88.0
margin_right = 136.0
margin_bottom = 128.0
size_flags_horizontal = 2
size_flags_vertical = 2
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 9 )

[node name="Quit" type="TextureButton" parent="Menu/HBoxContainer/LeftMenu/HBoxContainer/VBoxContainer"]
margin_top = 132.0
margin_right = 136.0
margin_bottom = 172.0
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 11 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )

[node name="press" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = -8.667
[connection signal="pressed" from="Menu/HBoxContainer/LeftMenu/HBoxContainer/VBoxContainer/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="Menu/HBoxContainer/LeftMenu/HBoxContainer/VBoxContainer/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="Menu/HBoxContainer/LeftMenu/HBoxContainer/VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Menu/HBoxContainer/LeftMenu/HBoxContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
